[package]
name = "s4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1.17.1"
rand = "0.8"
rand_chacha = "0.3.1"
futures = "0.3"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
log = "0.4"



[[bin]]
name = "s4"
path = "src/main.rs"