[package]
name = "s4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1.17.1"
rand = "0.8"
rand_chacha = "0.3.1"
futures = "0.3"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
pretty_env_logger = "0.4"
env_logger = "0.10.0"
dotenv = "0.15"



[[bin]]
name = "s4"
path = "src/main.rs"


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow